--- a/WeeklyChallengeOne-master/app/src/main/res/layout/row_layout.xml
+++ b/WeeklyChallengeOne-master/app/src/main/res/layout/row_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-        <ImageButton
+        <TextView
             android:layout_marginBottom="4dp"
             android:layout_marginTop="4dp"
             android:padding="6dp"
