--- a/WeeklyChallengeOne-master/app/src/main/res/layout/activity_main.xml
+++ b/WeeklyChallengeOne-master/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:padding="16dp">
 
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
     </android.support.v7.widget.RecyclerView>
-
-
 
 </android.support.constraint.ConstraintLayout>
